# genetic_algorithm_vis

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.py
app/: CMakeLists.txt  main.cpp  main.qml
app/inc/: algorithm_config.hpp  algorithm_controller.hpp  algorithm_data_model.hpp  algorithm_result.hpp  configparser.hpp  environment.hpp  estimation_func_data_model.hpp  individual.hpp  utils.hpp  worker_thread.hpp
app/src/: algorithm_controller.cpp  algorithm_data_model.cpp  configparser.cpp  environment.cpp  estimation_func_data_model.cpp  individual.cpp  utils.cpp  worker_thread.cpp
unittests/app/: CMakeLists.txt  utils_test.cpp
